[package]
name = "glimpse"
version = "0.1.0"
authors = ["Lorenz Leutgeb <lorenz@leutgeb.xyz>"]
edition = "2018"

[dependencies]
#enigo = "0.0.13"
uinput = "0.1.3"
bytes = "*"
futures = "0.1"
tokio-io = "0.1"
tokio-reactor = "0.1"
tokio-serial = "3.3.0"
hex = "*"
cgmath = "0.15"
enigo = {git="https://github.com/trishume/enigo"}
tokio = "0.1.22"

[build-dependencies]
bindgen = "0.49.2"
